--- a/references.bib
+++ b/references.bib
@@ -9,3 +9,36 @@
 	doi = {10.1002/9781118950951},
 	url = {http://dx.doi.org/10.1002/9781118950951}
 }
+
+@article{caret,
+	title = {caret: Classification and Regression Training},
+	author = {Kuhn, Max},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=caret}
+}
+
+@article{kuhn2008,
+	title = {Building Predictive Models in{\emph{R}}Using the{\textbf{caret}}Package},
+	author = {Kuhn, Max},
+	year = {2008},
+	date = {2008},
+	journal = {Journal of Statistical Software},
+	volume = {28},
+	number = {5},
+	doi = {10.18637/jss.v028.i05},
+	url = {http://dx.doi.org/10.18637/jss.v028.i05},
+	langid = {en}
+}
+
+@article{ogundepo2023,
+	title = {Performance analysis of supervised classification models on heart disease prediction},
+	author = {Ogundepo, Ezekiel Adebayo and Yahya, Waheed Babatunde},
+	year = {2023},
+	month = {01},
+	date = {2023-01-04},
+	journal = {Innovations in Systems and Software Engineering},
+	doi = {10.1007/s11334-022-00524-9},
+	url = {http://dx.doi.org/10.1007/s11334-022-00524-9},
+	langid = {en}
+}
